# stylizing-vit

./: NOTICE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: augmentation_demo.ipynb  inference_style_transfer.ipynb  training_demo.ipynb
experiments/: pretrain.py  style_transfer.py  train.py
experiments/bash/: evaluate_training.sh  pretrain.sh  reconstruction.sh  style_transfer.sh  train.sh
experiments/configs/: __init__.py  common.py  experiments.py  pretraining.py  training.py
experiments/configs/accelerate/: single_gpu.yaml
experiments/data/: __init__.py  _constants.py  _factory.py  camelyon.py  epistr.py  fitzpatrick.py
experiments/metrics/: __init__.py  reconstruction.py  stylizing.py
experiments/utils/: __init__.py  image_operations.py  preprocessing.py  reproducibility.py  training.py
stylizing_vit/: __init__.py  _factory.py  util.py
stylizing_vit/loss/: __init__.py  anatomical_loss.py  consistency.py  identity.py  style_loss.py  util.py
stylizing_vit/model/: __init__.py  _attention.py  _embedding.py  encoder.py  stylizing_vit.py
