[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stylizing-vit"
version = "0.1.0"
description = "Official PyTorch implementation of the paper 'Stylizing ViT: Anatomy-Preserving Instance Style Transfer for Domain Generalization'."
authors = [
  { name = "Sebastian Doerrich", email = "sebastian.doerrich@uni-bamberg.de" },
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "computer-vision",
    "medical-imaging",
    "style-transfer",
    "domain-generalization",
    "vision-transformer",
    "pytorch",
    "deep-learning",
    "histopathology",
    "dermatology",
]
license-files = ["LICEN[CS]E*", "NOTICE*"]

dependencies = [
    "torch>=2.5.1",
    "timm>=1.0.14",
    "numpy>=2.2.2",
    "Pillow>=11.1.0",
    "huggingface_hub>=0.33.2",
    "scipy>=1.15.1",
    "torchvision>=0.20.1",
]

[project.urls]
Paper = "https://arxiv.org/abs/2601.17586v1"
Homepage = "https://github.com/sdoerrich97/stylizing-vit"
Weights = "https://huggingface.co/collections/sdoerrich97/stylizing-vit"
Issues = "https://github.com/sdoerrich97/stylizing-vit/issues"